2009-08-28  higepon  <higepon@users.sourceforge.jp>

	* FFIProcedures.cpp (struct CallBackTrampoline): Added for FFI callback.

2009-08-26  higepon  <higepon@users.sourceforge.jp>

	* test/list.scm : Passed.	

	* compiler.scm (pass1/let): Fixed compilation of let's value non-tail.

2009-08-25  higepon  <higepon@users.sourceforge.jp>

	* test/list.scm : Failed.

	* tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss : Now psyntax pass let/named-let to backend instead of
	                                                       converting to lambda or letrec.

2009-08-23  higepon  <higepon@users.sourceforge.jp>

	* tools/psyntax-r6rs/rev10_to_10/psyntax/builders.ss : Changed R6RS expansion pattern.

	* tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss: An output of -e option is now stripped.

2009-08-21  higepon  <higepon@users.sourceforge.jp>

	* Added index check on vector-ref, vector-set!, Issue 95 reported by tabe.fixedpoint.

	* ListProcedures.cpp (listEx): Rewrote list in C++.

2009-08-20  higepon  <higepon@users.sourceforge.jp>

	* library.scm (perform-dynamic-wind): Improved perform-dynamic-wind.

2009-08-19  higepon  <higepon@users.sourceforge.jp>

	* compiler.scm : Fixed Issue 93 "equivalence predicates take arbitrary number of arguments" reported by tabe.fixedpoint.

2009-08-17  higepon  <higepon@users.sourceforge.jp>

	* VM-Run.cpp (VM::run): Added error check on set-c[ad]r! reported by mtakuya.

	* VM-Run.h (NUM_CMP_LOCAL): Fixed Issue 91. (by mrc.mgg).

	* PortProcedures.cpp (getStringNEx): Fixed Issue 92.

	* lib/memcached.ss (memcached-delete!): Added.

	* UtilityProcedures.cpp (number->string): Fixed Issue 90.

	* VM-Run.cpp (run): call/cc restoring code is now generated on restoring time not on capturing time.

	* VM-inl.h (VM::makeContinuation): Rewrote winders in C++ for performance reason.

2009-08-14  higepon  <higepon@users.sourceforge.jp>

	* UtilityProcedures.cpp (current-dynamic-winders): Adeed.
